--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@web3-react/core": "^6.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "web3": "^1.3.1"
   },
