--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bounce-kyc",
+  "name": "bounce-nft",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@web3-react/core": "^6.1.1",
+    "customize-cra": "^1.0.0",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
