--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "web3": "^1.3.1"
   },
   "scripts": {
-    "start": "set PORT=8888 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=8888 && react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
