--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "customize-cra": "^1.0.0",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
