--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "set PORT=8888 && react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "CI= react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
