Factory and ListNFT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "gitlens.codeLens.scopes": [
             "document"
         ]
-    }
+    },
+    "workbench.editor.enablePreview": false
 }
