--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.9",
+    "axios": "^0.21.1",
     "customize-cra": "^1.0.0",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
