--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "paths": {
         "@/*": ["src/*"],
         "@assets/*": ["src/assets/*"],
-        "@components/*": ["src/components/*"]
+        "@components/*": ["src/components/*"],
+        "@utils/*": ["src/utils/*"]
       }
   },
   "exclude": [
