--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3-react/walletconnect-connector": "^6.1.9",
     "axios": "^0.21.1",
     "customize-cra": "^1.0.0",
+    "material-ui": "^0.20.2",
     "polished": "^4.1.1",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
