--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.9",
     "axios": "^0.21.1",
+    "caniuse-lite": "^1.0.30001204",
     "customize-cra": "^1.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
     "react-copy-to-clipboard": "^5.0.3",
