--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@web3-react/walletconnect-connector": "^6.1.9",
     "axios": "^0.21.1",
     "bignumber": "^1.1.0",
+    "caniuse-lite": "^1.0.30001204",
+    "cropperjs": "^1.5.11",
     "customize-cra": "^1.0.0",
     "material-ui": "^0.20.2",
-    "polished": "^4.1.1",
-    "caniuse-lite": "^1.0.30001204",
     "moment": "^2.29.1",
+    "polished": "^4.1.1",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-cropper": "^2.1.7",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-focus-lock": "^2.5.0",
