--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "caniuse-lite": "^1.0.30001204",
     "cropperjs": "^1.5.11",
     "customize-cra": "^1.0.0",
+    "date-fns": "^2.19.0",
     "graphql": "^15.5.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
