--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "my-app",
+  "name": "fangible",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.14.1",
+    "@material-ui/core": "^4.11.0",
+    "@redux-requests/core": "1.6.1",
+    "@redux-requests/promise": "1.0.2",
+    "@redux-requests/react": "1.6.0",
+    "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.1",
+    "history": "^4.10.1",
+    "prettier": "^2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-intl-universal": "^2.4.5",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
+    "redux-smart-actions": "^1.0.0",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1",
+    "reselect": "^4.0.0"
+  },
+  "devDependencies": {
+    "babel-loader": "8.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.15",
+    "@types/loadable__component": "^5.13.3",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
