--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-focus-lock": "^2.5.0",
+    "react-intl": "^5.15.7",
     "react-lazy-load": "^3.1.13",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
