--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@binance-chain/bsc-connector": "^1.0.0",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
     "@redux-requests/core": "1.6.1",
     "@redux-requests/promise": "1.0.2",
     "@redux-requests/react": "1.6.0",
     "@reduxjs/toolkit": "^1.5.1",
+    "@walletconnect/web3-provider": "^1.4.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "history": "^4.10.1",
@@ -19,9 +21,12 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.3.5",
+    "web3modal": "^1.9.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
