--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.14",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
@@ -13,6 +14,7 @@
     "@walletconnect/web3-provider": "^1.4.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
+    "graphql": "^15.5.0",
     "history": "^4.10.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
