--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uid": "^2.3.1",
     "redux-persist": "^6.0.0",
     "redux-smart-actions": "^1.0.0",
+    "reselect": "^4.0.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "reselect": "^4.0.0"
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "babel-loader": "8.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -35,7 +35,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "babel-loader": "8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
