--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@redux-requests/react": "1.6.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@walletconnect/web3-provider": "^1.4.1",
+    "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "graphql": "^15.5.0",
