--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uid": "^2.3.1",
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
