--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@redux-requests/react": "1.6.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@walletconnect/web3-provider": "^1.4.1",
+    "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
@@ -24,6 +25,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
