--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@binance-chain/bsc-connector": "^1.0.0",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
+    "@redux-requests/axios": "^1.1.1",
     "@redux-requests/core": "1.6.1",
     "@redux-requests/promise": "1.0.2",
     "@redux-requests/react": "1.6.0",
