--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-uid": "^2.3.1",
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
+    "swiper": "^6.5.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.5",
