--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-truncate": "^2.4.0",
     "react-uid": "^2.3.1",
     "redux-saga": "^1.1.3",
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
+    "swiper": "^6.5.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.5",
@@ -46,6 +48,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-truncate": "^2.3.3",
     "babel-loader": "8.1.0"
   },
   "scripts": {
