--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@binance-chain/bsc-connector": "^1.0.0",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@redux-requests/axios": "^1.1.1",
     "@redux-requests/core": "1.6.1",
     "@redux-requests/promise": "1.0.2",
@@ -19,6 +20,7 @@
     "connected-react-router": "^6.9.1",
     "graphql": "^15.5.0",
     "history": "^4.10.1",
+    "immer": "^9.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
