--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.31.0",
     "react-intl-universal": "^2.4.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
