--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
+    "final-form": "^4.20.2",
     "graphql": "^15.5.0",
     "history": "^4.10.1",
     "immer": "^9.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
     "react-intersection-observer": "^8.31.0",
     "react-intl-universal": "^2.4.5",
     "react-redux": "^7.2.3",
