--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,57 +30,37 @@ upload-template: &upload-template
         at: '.'
     - run:
         name: Upload artifacts
-        command: aws s3 cp ./build s3://$DOMAIN_MARKET/ --acl bucket-owner-full-control --recursive --cache-control "public,max-age=600,s-maxage=3600"
+        command: |
+        pwd
+        echo "Uploading assets to $DOMAIN"
+        aws s3 cp ./build s3://$DOMAIN/ --acl bucket-owner-full-control --recursive --cache-control "public,max-age=600,s-maxage=3600"
+        echo "Invalidating CDN network"
+        INVALIDATION_ID=`aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths '/*' | jq -r '.Invalidation.Id'`
+        echo "Invalidation ID is $INVALIDATION_ID"
+        echo "CDN Invalidation request is sent."
     - run:
         name: Cloudfront invalidation
         command: aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID_MARKET --paths '/*'
 
 jobs:
-  # build
-  build-stage:
+  build-bs1:
     <<: *build-template
-  build-prod:
-    <<: *build-template
-  # upload
-  upload-stage:
-    <<: *upload-template
-  upload-prod:
+  upload-bs1:
     <<: *upload-template
 
 workflows:
   version: 2.1
   bounce_market:
     jobs:
-      # stage
-      - approve-stage:
+      - approve-bs1:
           type: approval
-          filters:
-            branches:
-              only: [ stage ]
-      - build-stage:
-          context:
-            - bounce_build_stage
-          requires:
-            - approve-stage
-      - upload-stage:
-          context:
-            - cicd
-            - bounce_build_stage
-          requires:
-            - build-stage
-      # prod
-      - approve-prod:
-          type: approval
-          filters:
-            branches:
-              only: [ master ]
-      - build-prod:
+      - build-bs1:
           context: bounce_build_prod
           requires:
-            - approve-prod
-      - upload-prod:
+            - approve-bs1
+      - upload-bs1:
           context:
-            - cicd
-            - bounce_build_prod
+            - app_cicd
+            - bs1_deploy
           requires:
-            - build-prod
+            - build-bs1
