feat: image compressor; and img home add litimgurl

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.9",
+    "await-to-js": "^3.0.0",
     "axios": "^0.21.1",
     "bignumber": "^1.1.0",
     "caniuse-lite": "^1.0.30001204",
@@ -22,6 +23,7 @@
     "customize-cra": "^1.0.0",
     "date-fns": "^2.19.0",
     "graphql": "^15.5.0",
+    "img-compressor": "^0.0.2",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
     "polished": "^4.1.1",
