--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.9",
+    "antd": "^4.15.2",
     "await-to-js": "^3.0.0",
     "axios": "^0.21.1",
     "bignumber": "^1.1.0",
