--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
+    "date-fns": "^2.21.1",
     "final-form": "^4.20.2",
     "graphql": "^15.5.0",
     "history": "^4.10.1",
