--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@redux-requests/promise": "1.0.2",
     "@redux-requests/react": "1.6.0",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@walletconnect/web3-provider": "^1.4.1",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
@@ -26,8 +27,10 @@
     "immer": "^9.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
+    "react-focus-on": "^3.5.2",
     "react-intersection-observer": "^8.31.0",
     "react-intl-universal": "^2.4.5",
     "react-redux": "^7.2.3",
