--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-truncate": "^2.4.0",
     "react-uid": "^2.3.1",
     "redux-saga": "^1.1.3",
