Init create brand action

--- a/.env.rinkeby
+++ b/.env.rinkeby
@@ -1,1 +1,3 @@
 REACT_APP_API_BASE=https://market-test.bounce.finance
+REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc_test
+REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
