--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,37 +30,71 @@ upload-template: &upload-template
         at: '.'
     - run:
         name: Upload artifacts
-        command: |
-        pwd
-        echo "Uploading assets to $DOMAIN"
-        aws s3 cp ./build s3://$DOMAIN/ --acl bucket-owner-full-control --recursive --cache-control "public,max-age=600,s-maxage=3600"
-        echo "Invalidating CDN network"
-        INVALIDATION_ID=`aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths '/*' | jq -r '.Invalidation.Id'`
-        echo "Invalidation ID is $INVALIDATION_ID"
-        echo "CDN Invalidation request is sent."
+        command: aws s3 cp ./build s3://$DOMAIN_MARKET/ --acl bucket-owner-full-control --recursive --cache-control "public,max-age=600,s-maxage=3600"
     - run:
         name: Cloudfront invalidation
         command: aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID_MARKET --paths '/*'
 
 jobs:
-  build-bs1:
+  # build
+  build-stage:
     <<: *build-template
-  upload-bs1:
+  build-prod:
+    <<: *build-template
+  # upload
+  upload-stage:
+    <<: *upload-template
+  upload-prod:
     <<: *upload-template
 
 workflows:
   version: 2.1
   bounce_market:
     jobs:
-      - approve-bs1:
+      # stage
+      - approve-stage:
           type: approval
-      - build-bs1:
+          filters:
+            branches:
+              only: [ stage ]
+      - build-stage:
+          context:
+            - bounce_build_stage
+          requires:
+            - approve-stage
+      - upload-stage:
+          context:
+            - cicd
+            - bounce_build_stage
+          requires:
+            - build-stage
+      # stage.fangible.com
+      - approve-fangible:
+          type: approval
+      - build-stage:
+          context:
+            - fangible_build_stage
+          requires:
+            - approve-fangible
+      - upload-fangible:
+          context:
+            - cicd
+            - fangible_build_stage
+          requires:
+            - build-fangible
+      # prod
+      - approve-prod:
+          type: approval
+          filters:
+            branches:
+              only: [ master ]
+      - build-prod:
           context: bounce_build_prod
           requires:
-            - approve-bs1
-      - upload-bs1:
+            - approve-prod
+      - upload-prod:
           context:
-            - app_cicd
-            - bs1_deploy
+            - cicd
+            - bounce_build_prod
           requires:
-            - build-bs1
+            - build-prod
