--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-share": "^4.4.0",
     "react-truncate": "^2.4.0",
     "react-uid": "^2.3.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
