--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     ]
   },
   "scripts": {
-    "start": "env-cmd -f .env.rinkeby react-scripts start",
+    "start": "env-cmd -f .env.smartchain react-scripts start",
     "start:rinkeby": "env-cmd -f .env.rinkeby react-scripts start",
-    "build": "env-cmd -f .env.smartchain react-scripts build",
+    "build": "env-cmd -f .env.rinkeby react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
