[FD-3386] Debounce for search

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@redux-requests/promise": "1.0.2",
     "@redux-requests/react": "1.6.0",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/lodash": "^4.14.169",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@walletconnect/web3-provider": "^1.4.1",
     "axios": "^0.21.1",
@@ -25,6 +26,7 @@
     "graphql": "^15.5.0",
     "history": "^4.10.1",
     "immer": "^9.0.1",
+    "lodash": "^4.17.21",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
