--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-cropper": "^2.1.7",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
     "react-focus-on": "^3.5.2",
