[FD-3386] Configure prod

--- a/.env.smartchain
+++ b/.env.smartchain
@@ -1,3 +1,9 @@
 REACT_APP_API_BASE=https://bounce-market.bounce.finance
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
+REACT_APP_POOL_DETAILS_URL=https://api1-bsc.fangible.com/v1/bsc/pool
+REACT_APP_POOLS_URL=https://api1-bsc.fangible.com/v1/bsc/pools
+REACT_APP_FIXED_CONTRACT_ADDRESS=0x58E84d90fd976A183bEfB36a69caB464bef18cC5
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x780451a32959A96789F99398dEb6678d2c438EB4
+REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
+REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
