[FD-3386] smartchain-test by default

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "scripts": {
     "start": "env-cmd -f .env.smartchain react-scripts start",
     "start:smartchain-test": "env-cmd -f .env.smartchain-test react-scripts start",
-    "build": "env-cmd -f .env.smartchain react-scripts build",
+    "build": "env-cmd -f .env.smartchain-test react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
