--- a/.env.smartchain
+++ b/.env.smartchain
@@ -8,3 +8,4 @@ REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x780451a32959A96789F99398dEb6678d2c4
 REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
 REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0xE8e4017952935F550dad7e6D42362715A17C0846
+REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
