--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -8,3 +8,4 @@ REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x7eF2DECf116f8aeBb9a7940A4713C00997D
 REACT_APP_ERC721_WITH_SIGN=0x479FCe86f116665b8a4d07165a0eB7799A4AEb30
 REACT_APP_ERC1155_WITH_SIGN=0xaAAeAe4283635358946E653883cD12E5c06cC5E3
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x8d63ca3ba544fbb22c284f2cffe4a6b7bd243860
+REACT_APP_BRAND_BASEURI=https://market-test.bounce.finance/data/
