--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.169",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@walletconnect/web3-provider": "^1.4.1",
+    "ahooks": "^2.10.5",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
