[FD-3386] Update config

--- a/.env.smartchain
+++ b/.env.smartchain
@@ -9,3 +9,27 @@ REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
 REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x356cb4004b8e7b9683a27d0047df76ae4de6e2f1
 REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
+
+REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com
+REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
+REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
+REACT_APP_POOL_DETAILS_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main/pool
+REACT_APP_POOLS_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main/pools
+REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET=0xe7A7E66a809B1372A5402c2B5e33263Ff1F37dC4
+REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF42
+REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a426
+REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
+REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
+
+REACT_APP_API_BASE_ETH_MAINNET=https://heco-api.bounce.finance
+REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-heco.fangible.com/v1/heco
+REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/heco
+REACT_APP_POOL_DETAILS_URL_ETH_MAINNET=https://api1-heco.fangible.com/v1/heco/pool
+REACT_APP_POOLS_URL_ETH_MAINNET=https://api1-heco.fangible.com/v1/heco/pools
+REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET=0xFCEc495B3FbB41fC8034E4d2Fd85289F549922b1
+REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0x25A836DCBD78dcC9D29FEb8010424c2E56017325
+REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0x94E7d2a17EAA6A86DFD2Fddb639F9878d8377CC7
+REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0xeCd2B33C4e80f284c3d0BDc8147Fdf02Ca30a737
+REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://heco-api.bounce.finance/data/
