--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.14",
     "@binance-chain/bsc-connector": "^1.0.0",
+    "@ethersproject/providers": "^5.3.0",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -16,6 +17,8 @@
     "@types/lodash": "^4.14.169",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@walletconnect/web3-provider": "^1.4.1",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "ahooks": "^2.10.5",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
