ci: rename CI tasks

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
   # build
   build-stage:
     <<: *build-template
-  build-fangible:
+  build-bounce-stage:
     <<: *build-template
   build-prod:
     <<: *build-template
