--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE=https://market-test.bounce.finance
+REACT_APP_API_BASE=https://market-test.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc_test
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
 REACT_APP_ACTIVITIES_URL=https://api1-bsc.fangible.com/v1/bsc_test/activities
@@ -9,7 +9,7 @@ REACT_APP_ERC1155_WITH_SIGN=0xaAAeAe4283635358946E653883cD12E5c06cC5E3
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x8d63ca3ba544fbb22c284f2cffe4a6b7bd243860
 REACT_APP_BRAND_BASEURI=https://market-test.bounce.finance/data/
 
-REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com
+REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
 REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
 REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
@@ -19,7 +19,7 @@ REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a4
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
 REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
 
-REACT_APP_API_BASE_HECO=https://heco-api.bounce.finance
+REACT_APP_API_BASE_HECO=https://heco-api.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
 REACT_APP_NFTVIEW_URL_V2_HECO=https://nftview.bounce.finance/v2/heco
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
