--- a/package.json
+++ b/package.json
@@ -66,13 +66,12 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-truncate": "^2.3.3",
     "babel-loader": "8.1.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.0",
     "lint-staged": "^10.5.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "scripts": {
@@ -83,7 +82,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "eslintConfig": {
     "extends": [
