--- a/.env.smartchain
+++ b/.env.smartchain
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE=https://bounce-market.bounce.finance
+REACT_APP_API_BASE=https://bounce-market.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
 REACT_APP_ACTIVITIES_URL=https://api1-bsc.fangible.com/v1/bsc/activities
@@ -9,7 +9,7 @@ REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x356cb4004b8e7b9683a27d0047df76ae4de6e2f1
 REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
 
-REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com
+REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
 REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
 REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
@@ -19,7 +19,7 @@ REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a4
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
 REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
 
-REACT_APP_API_BASE_HECO=https://heco-api.bounce.finance
+REACT_APP_API_BASE_HECO=https://heco-api.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
 REACT_APP_NFTVIEW_URL_V2_HECO=https://nftview.bounce.finance/v2/heco
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
@@ -28,3 +28,13 @@ REACT_APP_ERC721_WITH_SIGN_HECO=0x25A836DCBD78dcC9D29FEb8010424c2E56017325
 REACT_APP_ERC1155_WITH_SIGN_HECO=0x94E7d2a17EAA6A86DFD2Fddb639F9878d8377CC7
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_HECO=0xeCd2B33C4e80f284c3d0BDc8147Fdf02Ca30a737
 REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
+
+REACT_APP_API_BASE_RINKEBY=https://market-test.bounce.finance/api/v2/rinkeby
+REACT_APP_FANGIBLE_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby
+REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
+REACT_APP_ACTIVITIES_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby/activities
+REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
+REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
+REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
+REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
