--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "@types/react-truncate": "^2.3.3",
     "babel-loader": "8.1.0",
     "husky": "^7.0.0",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "madge": "^5.0.1"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -83,7 +84,8 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "check-circular-dependency": "madge --circular src"
   },
   "eslintConfig": {
     "extends": [
