Adjustment of brand and Bidding

--- a/.env.smartchain
+++ b/.env.smartchain
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE=https://bounce-market.bounce.finance/api/v2/main
+REACT_APP_API_BASE=https://bounce-market-pre.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
 REACT_APP_ACTIVITIES_URL=https://api1-bsc.fangible.com/v1/bsc/activities
@@ -7,7 +7,7 @@ REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x780451a32959A96789F99398dEb6678d2c4
 REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
 REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x356cb4004b8e7b9683a27d0047df76ae4de6e2f1
-REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
+REACT_APP_BRAND_BASEURI=https://bounce-market-pre.bounce.finance/data/
 
 REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
