--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -3,7 +3,9 @@ REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc_test
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
 REACT_APP_ACTIVITIES_URL=https://api1-bsc.fangible.com/v1/bsc_test/activities
 REACT_APP_FIXED_CONTRACT_ADDRESS=0x1C035FD1F11eA9Bb753625fD167205Cd40029607
+REACT_APP_FIXED_CONTRACT_ADDRESS_TIME=0x2faEb20F3cec9583593d143981A04ef8ec60d241
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x7eF2DECf116f8aeBb9a7940A4713C00997DF79fd
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_TIME=0xb0F74E94c345aAc5568244fdaC7232bB98B7e79a
 REACT_APP_ERC721_WITH_SIGN=0x479FCe86f116665b8a4d07165a0eB7799A4AEb30
 REACT_APP_ERC1155_WITH_SIGN=0xaAAeAe4283635358946E653883cD12E5c06cC5E3
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x8d63ca3ba544fbb22c284f2cffe4a6b7bd243860
