--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@date-io/date-fns": "1.x",
     "@material-ui/pickers": "^3.3.10",
     "@loadable/component": "^5.14.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/core": "4.11.0",
+    "@material-ui/lab": "4.0.0-alpha.57",
     "@redux-requests/axios": "^1.1.1",
     "@redux-requests/core": "1.6.1",
     "@redux-requests/promise": "1.0.2",
