[FAN-371] Support Matic

--- a/.env.smartchain
+++ b/.env.smartchain
@@ -38,3 +38,13 @@ REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
 REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
+
+REACT_APP_API_BASE_MATIC=https://bounce-market-matic.bounce.finance/api/v2/matic
+REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
+REACT_APP_NFTVIEW_URL_V2_MATIC=https://nftview.bounce.finance/v2/matic
+REACT_APP_ACTIVITIES_URL_MATIC=https://api1-matic.fangible.com/v1/matic/activities
+REACT_APP_FIXED_CONTRACT_ADDRESS_MATIC=0x1BF765459c9405b3734d57B25c7ba45A13ce86CB
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_MATIC=0x06aA57665D43343D2D425834fc6C3bf96025992e
+REACT_APP_ERC721_WITH_SIGN_MATIC=0x52ab9455EeC37727A69A90E29b0Ce86ebD9C1338
+REACT_APP_ERC1155_WITH_SIGN_MATIC=0x453D1f64611C065Ff7c99D3C457754A2e20314b8
+REACT_APP_BRAND_CONTRACT_ADDRESS_V2_MATIC=0x871e155AF8F17Ca870d7b66dF79f0C88f73D42b0
