--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
+    "colorthief": "^2.3.2",
     "connected-react-router": "^6.9.1",
     "date-fns": "^2.21.1",
     "env-cmd": "^10.1.0",
