--- a/.env.smartchain
+++ b/.env.smartchain
@@ -1,7 +1,6 @@
 REACT_APP_API_BASE=https://bounce-market.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
-REACT_APP_ACTIVITIES_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_FIXED_CONTRACT_ADDRESS=0x58E84d90fd976A183bEfB36a69caB464bef18cC5
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x780451a32959A96789F99398dEb6678d2c438EB4
 REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
@@ -12,7 +11,6 @@ REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
 REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
 REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
-REACT_APP_ACTIVITIES_URL_ETH=https://api1-bsc.fangible.com/v1/eth
 REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET=0xe7A7E66a809B1372A5402c2B5e33263Ff1F37dC4
 REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF42
@@ -23,7 +21,6 @@ REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
 REACT_APP_API_BASE_HECO=https://heco-api.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
 REACT_APP_NFTVIEW_URL_V2_HECO=https://nftview.bounce.finance/v2/heco
-REACT_APP_ACTIVITIES_URL_HECO=https://api1-bsc.fangible.com/v1/heco
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_HECO=0xFCEc495B3FbB41fC8034E4d2Fd85289F549922b1
 REACT_APP_ERC721_WITH_SIGN_HECO=0x25A836DCBD78dcC9D29FEb8010424c2E56017325
@@ -33,8 +30,7 @@ REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
 
 REACT_APP_API_BASE_RINKEBY=https://market-test.bounce.finance/api/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby
-REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
-REACT_APP_ACTIVITIES_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby
+REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkebyeby
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
@@ -43,8 +39,7 @@ REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925
 
 REACT_APP_API_BASE_MATIC=https://bounce-market-matic.bounce.finance/api/v2/matic
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
-REACT_APP_NFTVIEW_URL_V2_MATIC=https://nftview.bounce.finance/v2/matic
-REACT_APP_ACTIVITIES_URL_MATIC=https://api1-matic.fangible.com/v1/matic
+REACT_APP_NFTVIEW_URL_V2_MATIC=https://nftview.bounce.finance/v2/maticc
 REACT_APP_FIXED_CONTRACT_ADDRESS_MATIC=0x1BF765459c9405b3734d57B25c7ba45A13ce86CB
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_MATIC=0x06aA57665D43343D2D425834fc6C3bf96025992e
 REACT_APP_ERC721_WITH_SIGN_MATIC=0x52ab9455EeC37727A69A90E29b0Ce86ebD9C1338
