--- a/.env.smartchain
+++ b/.env.smartchain
@@ -28,8 +28,8 @@ REACT_APP_ERC1155_WITH_SIGN_HECO=0x94E7d2a17EAA6A86DFD2Fddb639F9878d8377CC7
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_HECO=0xeCd2B33C4e80f284c3d0BDc8147Fdf02Ca30a737
 REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
 
-REACT_APP_API_BASE_RINKEBY=https://market-test.bounce.finance/api/v2/rinkeby
-REACT_APP_FANGIBLE_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby
+REACT_APP_API_BASE_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/v2/rinkeby
+REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/v2/rinkeby
 REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkebyeby
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
