update env host

--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/bsc
+REACT_APP_API_BASE=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc_test
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
 REACT_APP_FIXED_CONTRACT_ADDRESS=0x1C035FD1F11eA9Bb753625fD167205Cd40029607
