add env config and fix bug

--- a/.env.smartchain
+++ b/.env.smartchain
@@ -1,8 +1,10 @@
-REACT_APP_API_BASE=https://api-services.fangible.com/api/v2/bsc 
+REACT_APP_API_BASE=https://api-services.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
 REACT_APP_FIXED_CONTRACT_ADDRESS=0x58E84d90fd976A183bEfB36a69caB464bef18cC5
+REACT_APP_FIXED_CONTRACT_ADDRESS_TIME=0x8C3381bfF2dE4180A70a163c4c41dfd018926ee3
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x780451a32959A96789F99398dEb6678d2c438EB4
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_TIME=0x5de983720A06f01537fcd31771d83d2067fC1944
 REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
 REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x356cb4004b8e7b9683a27d0047df76ae4de6e2f1
@@ -12,7 +14,9 @@ REACT_APP_API_BASE_ETH_MAINNET=https://api-services.fangible.com/api/v2/eth
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
 REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
 REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
+REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET_TIME=0x2da357e40Db4544F2f5BF6541a82F0b02b591844
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET=0xe7A7E66a809B1372A5402c2B5e33263Ff1F37dC4
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET_TIME=0x44c14A713536F858087dE97730E4C7Df2e2CcD46
 REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF42
 REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a426
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
@@ -36,6 +40,7 @@ REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
 REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
+REACT_APP_BRAND_BASEURI_RINKEBY=https://rinkeby-api.bounce.finance/data/
 
 REACT_APP_API_BASE_MATIC=https://api-services.fangible.com/api/v2/matic
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
@@ -45,3 +50,4 @@ REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_MATIC=0x06aA57665D43343D2D425834fc6C3
 REACT_APP_ERC721_WITH_SIGN_MATIC=0x52ab9455EeC37727A69A90E29b0Ce86ebD9C1338
 REACT_APP_ERC1155_WITH_SIGN_MATIC=0x453D1f64611C065Ff7c99D3C457754A2e20314b8
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_MATIC=0x871e155AF8F17Ca870d7b66dF79f0C88f73D42b0
+REACT_APP_BRAND_BASEURI_MATIC=https://matic-api.bounce.finance/data/
