--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -14,7 +14,9 @@ REACT_APP_API_BASE_ETH_MAINNET=https://api-services.fangible.com/api/v2/eth
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
 REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
 REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
+REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET_TIME=0x2da357e40Db4544F2f5BF6541a82F0b02b591844
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET=0xe7A7E66a809B1372A5402c2B5e33263Ff1F37dC4
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET_TIME=0x44c14A713536F858087dE97730E4C7Df2e2CcD46
 REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF42
 REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a426
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
