--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -1,4 +1,5 @@
-REACT_IS_DEV=TEST
+REACT_APP_BASE_ENV = TEST
+
 REACT_APP_API_BASE=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc_test
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
