--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -24,6 +24,7 @@ REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF4
 REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a426
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
 REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
+REACT_APP_MULTI_CALL_ETH_MAINNET=0xeefBa1e63905eF1D7ACbA5a8513c70307C1cE441
 
 REACT_APP_API_BASE_HECO=https://api-services.fangible.com/api/v2/heco
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
@@ -46,6 +47,7 @@ REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
 REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
 REACT_APP_BRAND_BASEURI_RINKEBY=https://rinkeby-api.bounce.finance/data/
+REACT_APP_MULTI_CALL_ETH_RINKEBY=0x42Ad527de7d4e9d9d011aC45B31D8551f8Fe9821
 
 REACT_APP_API_BASE_MATIC=https://api-services.fangible.com/api/v2/matic 
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
