--- a/.env.smartchain
+++ b/.env.smartchain
@@ -9,6 +9,7 @@ REACT_APP_ERC721_WITH_SIGN=0xbf4f70215e8f99e384afdf641e55181155714163
 REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x356cb4004b8e7b9683a27d0047df76ae4de6e2f1
 REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
+REACT_APP_MULTI_CALL_BSC=0x5615808C56FE548F93cD436e11BA2fA434a0A439
 
 REACT_APP_API_BASE_ETH_MAINNET=https://api-services.fangible.com/api/v2/eth
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
@@ -21,6 +22,7 @@ REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF4
 REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a426
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
 REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
+REACT_APP_MULTI_CALL_ETH_MAINNET=0xeefBa1e63905eF1D7ACbA5a8513c70307C1cE441
 
 REACT_APP_API_BASE_HECO=https://api-services.fangible.com/api/v2/heco
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
@@ -41,6 +43,7 @@ REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
 REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
 REACT_APP_BRAND_BASEURI_RINKEBY=https://rinkeby-api.bounce.finance/data/
+REACT_APP_MULTI_CALL_ETH_RINKEBY=0x42Ad527de7d4e9d9d011aC45B31D8551f8Fe9821
 
 REACT_APP_API_BASE_MATIC=https://api-services.fangible.com/api/v2/matic
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
