Add contract config

--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -48,6 +48,7 @@ REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
 REACT_APP_BRAND_BASEURI_RINKEBY=https://rinkeby-api.bounce.finance/data/
 REACT_APP_MULTI_CALL_ETH_RINKEBY=0x42Ad527de7d4e9d9d011aC45B31D8551f8Fe9821
+REACT_APP_Royalty_Config_RINKEBY=0x822B31ab6A2E08C44800F39DB3B89D9B60FB4692
 
 REACT_APP_API_BASE_MATIC=https://api-services.fangible.com/api/v2/matic 
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
