fix: uset price

--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -26,11 +26,14 @@ REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E
 REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
 REACT_APP_MULTI_CALL_ETH_MAINNET=0xeefBa1e63905eF1D7ACbA5a8513c70307C1cE441
 
+REACT_APP_MULTI_CALL_HECO=0x9a5ea64F099f4667717C1d80a64e38c4D461AD73
 REACT_APP_API_BASE_HECO=https://api-services.fangible.com/api/v2/heco
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
 REACT_APP_NFTVIEW_URL_V2_HECO=https://nftview.bounce.finance/v2/heco
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
+REACT_APP_FIXED_CONTRACT_ADDRESS_HECO_TIME=0x738de648E84b5d990DAA7e6598546f7a4eAC1BB4
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_HECO=0xFCEc495B3FbB41fC8034E4d2Fd85289F549922b1
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_HECO_TIME=0x6B142c939e686f24E8De46f9D5669EFEEa2250D7
 REACT_APP_ERC721_WITH_SIGN_HECO=0x25A836DCBD78dcC9D29FEb8010424c2E56017325
 REACT_APP_ERC1155_WITH_SIGN_HECO=0x94E7d2a17EAA6A86DFD2Fddb639F9878d8377CC7
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_HECO=0xeCd2B33C4e80f284c3d0BDc8147Fdf02Ca30a737
