fix: supported HECO image CDN

--- a/.env.smartchain
+++ b/.env.smartchain
@@ -64,3 +64,4 @@ REACT_APP_BRAND_CONTRACT_ADDRESS_V2_MATIC=0x871e155AF8F17Ca870d7b66dF79f0C88f73D
 REACT_APP_BRAND_BASEURI_MATIC=https://api-services.fangible.com/matic/data/
 
 REACT_APP_IMG_CDN_URL=https://ap1-cfs3-media-bounce.bounce.finance/
+REACT_APP_IMG_HECO_CDN_URL=https://ap1-cfs3-heco.fangible.com/
