✨ feat: add instruction page

--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -68,3 +68,5 @@ REACT_APP_ERC1155_WITH_SIGN_MATIC=0x453D1f64611C065Ff7c99D3C457754A2e20314b8
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_MATIC=0x871e155AF8F17Ca870d7b66dF79f0C88f73D42b0
 REACT_APP_BRAND_BASEURI_MATIC=https://api-services.fangible.com/matic/data/
 REACT_APP_ROYALTY_CONFIG_MATIC=
+
+REACT_APP_API_BASE_AIRDROP=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/rinkeby
