--- a/.env.smartchain
+++ b/.env.smartchain
@@ -50,6 +50,7 @@ REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
 REACT_APP_FT_CONTRACT_ADDRESS_RINKEBY=0xE9EB9E2E6a03f7a78a6Cf75B15c42c8954CCD200
 REACT_APP_APE_CONTRACT_ADDRESS_RINKEBY=0x4AB5117195E6A4921aE90312a914d7f5A769455e
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0x4E826e7368d4C814F083f2C649501F57E3265430
+REACT_APP_APE_SWAPE_CONTRACT_ADDRESS_RINKEBY=0xa2655d3a8197bD16259461d3FACe52F48d7D5B89
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY_TIME=0xFdd9f9e38ed530372175f6e02403e355A8Aa2881
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
