feat: blind box

--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -48,6 +48,7 @@ REACT_APP_API_BASE_URL_RINKEBY=https://api-ape-stage.ccian.cc
 REACT_APP_API_BASE_RINKEBY=https://api-ape-stage.ccian.cc/api/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/rinkeby
 REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
+REACT_APP_BLIND_BOX_CONTRACT_ADDRESS_RINKEBY=0x69f919bf27F415D96d6a0653941B5C50F3c4eC79
 REACT_APP_FT_CONTRACT_ADDRESS_RINKEBY=0x1E98100A5578969A06f9f9612382C878218aE8e5
 REACT_APP_APE_CONTRACT_ADDRESS_RINKEBY=0x647Bc049228F504cd8B4EC97C39f7CcF8cd67fbA
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
